# ReplAI

./: .gitignore  CONVERSATION_SCHEMA.md  QUICK_START.md  README.md  browse_tags.py  discord_parser.py  main.py  parse_discord.sh  pyproject.toml  requirements.txt  retrieve_conversations.py
app/: README.md  agent.ts  agent_finetuned_old.ts  agent_krish.ts  agent_v2.ts  agent_v3.ts  agent_v4.ts  memoryClient.ts  package.json  retrieve_conversations.py  test_message.ts
collection/: collect_discord.sh
dashboards/: style_dashboard.py
data/: .gitignore  IG_USAGE.md  INSTAGRAM.md  parse_instagram_messages.py
discord/sample_data/: sample_conversation_1.json  (+1 more)
docs/: GRAPH_RAG_WORKFLOW.md  IG_USAGE.md  INSTAGRAM.md
graphrag/: __init__.py  config.py  corpus.py  embedding.py  neo4j_ingest.py  networkx_adapter.py  retrieval.py  service.py  tagging.py
scripts/: modal_train.py  train.sh
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothPPOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py
utils/: README.md  check_finetuning.py  decrypt_for_mem.sh  decrypt_messages.py  discord_parser.py  download_and_decrypt_dataset.sh  encrypt_conversations.py  encryption_utils.py  fix_conversation_format.py  generate_style_summary.py  imessage_parser.py  imsg_parser.py  instagram_parser.py  parse_discord.sh  parse_imessage.sh  prepare_finetuning_data.py  schema_checker.py  start_finetuning.py  style_filter.py  upload.sh  upload_dataset.py
wandb/: latest-run
(+29 files in other folders)
