[project]
name = "replai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "networkx>=3.3",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "sentence-transformers>=3.0.0",
    "pytz>=2024.1",
    "neo4j>=5.23.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "tqdm>=4.66.0",
]
